# RoBERTa

./: .gitignore  Makefile  README.md  data.dvc  pyproject.toml  requirements.txt
config/: config.yaml
docs/: mkdocs.yml
docs/docs/: index.md
models/: randomForestModel.joblib
notebooks/: analysis-credit-card-fraud.ipynb  notebook_1.ipynb
training/src/: RandomForest.py  crossValidation.py  main.py  trainTestSplit.py  undersampling.py
training/tests/: test_BernoulliNB.py  test_BernoullinNB.py  test_DataTests.py  test_DecisionTree.py  test_K-NN.py  test_LogisticRegression.py  test_NeuralNetwork.py  test_Preprocessing.py  test_RandomForest.py  undersampling.py
