[tool.poetry]
name = "creditCardFraud"
version = "0.1.0"
description = ""
authors = ["Khaelf0ns <mhatt.fons@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asttokens = "^2.4.1"
contourpy = "^1.3.0"
cycler = "^0.12.1"
debugpy = "^1.8.5"
decorator = "^5.1.1"
executing = "^2.1.0"
fonttools = "^4.53.1"
imbalanced-learn = "^0.12.3"
imblearn = "^0.0"
ipykernel = "^6.29.5"
ipython = "^8.27.0"
jedi = "^0.19.1"
joblib = "^1.4.2"
jupyter-client = "^8.6.2"
jupyter-core = "^5.7.2"
kiwisolver = "^1.4.7"
matplotlib = "^3.9.2"
matplotlib-inline = "^0.1.7"
nest-asyncio = "^1.6.0"
numpy = "^2.1.1"
packaging = "^24.1"
pandas = "^2.2.2"
parso = "^0.8.4"
pexpect = "^4.9.0"
pillow = "^10.4.0"
pip = "^24.2"
platformdirs = "^4.3.1"
prompt-toolkit = "^3.0.47"
psutil = "^6.0.0"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.3"
pygments = "^2.18.0"
pyparsing = "^3.1.4"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.1"
pyzmq = "^26.2.0"
scikit-learn = "^1.5.1"
scipy = "^1.14.1"
seaborn = "^0.13.2"
six = "^1.16.0"
stack-data = "^0.6.3"
threadpoolctl = "^3.5.0"
tornado = "^6.4.1"
tqdm = "^4.66.5"
traitlets = "^5.14.3"
tzdata = "^2024.1"
wcwidth = "^0.2.13"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
